feat(openapi): change product operation ids for clarity
